Fixed deprecation